<resources>
    <string name="app_name">VideoCall</string>

    <string name="agora_app_id">f5d9905695274bb5bd4d1d4b2106b008</string>
    <string name="agora_app_cert">04b6b49589094246a382eeb31f32b9c6</string>
    <string name="agora_temp">006f5d9905695274bb5bd4d1d4b2106b008IAD/lHoSC8MBC6FFvaUXe6fFZUq7NxiHHTFXNw7NfIR044amEDYh39v0EAAfDVvGBv9nXQEAAQAAAAAA</string>


    <!-- Login Register Forgot Activities Strings -->
    <string name="text_username">Username</string>
    <string name="text_email">E Mail</string>
    <string name="text_password">Password</string>
    <string name="text_register">REGISTER</string>
    <string name="login_title">Already \nHave An \nAccount?</string>
    <string name="register_signin">Already Have An Account?</string>
    <string name="text_login">LOGIN</string>
    <string name="login_signup">New user? Register Now</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="register_select_photo">SELECT PHOTO</string>
    <string name="register_title">Here’s\nyour first\nstep with \nus! </string>
    <string name="forgot_title">Forgot \nPassword?</string>
    <string name="empty_values">Please Fill All Fields</string>
    <string name="not_valid_email">Enter Valid Email Address</string>
    <string name="not_same_passwords">Passwords Are Not Same</string>
    <string name="error_profile_img">Select Profile Image</string>
    <string name="empty_email">Fill Email Field</string>
    <string name="text_forgot">Reset Password</string>


    <string name="chatlog_send">SEND</string>


    <!-- Menu Strings -->

    <string name="menu_signout">Sign Out</string>
    <string name="menu_latest_messages">Latest Messages</string>
    <string name="menu_users">Users</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="friends_tab1_friends">Friends</string>
    <string name="friends_tab2_requests">Requests</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- VideoChatViewActivity Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_req_video_call_text">GÖRÜNTÜLÜ ARAMA</string>
    <string name="menu_switch_camera">Switch Camera</string>
    <string name="menu_video_off">Video Off</string>
    <string name="menu_mute_sound">Mute Sound</string>
    <string name="menu_send_file">Send File</string>
    <string name="menu_send_message">Send Message</string>
    <string name="menu_remove_messages">Remove All Messages</string>


    <!-- ProfileFragment Strings -->
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="menu_messages">Messages</string>
    <string name="profile_edit">EDIT</string>
    <string name="profile_about">About</string>
    <string name="profile_mobile">Mobile</string>
    <string name="profile_message">Message</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_apply">Apply</string>
    <string name="profile_cancel">Cancel</string>


    <!-- MessagesFragment Strings -->
    <string name="messages_messages">Messages</string>
    <string name="messages_calls">Calls</string>
    <string name="profile_account_info">Account Info</string>
    <string name="messaging_home">Messaging</string>
    <string name="video_calling_home">Video Calling</string>
    <string name="user_find_home">Find Friends</string>
    <string name="settings_about">About Us</string>
    <string name="settings_statistics">Statistics</string>
    <string name="settings_announcements">Announcements</string>
    <string name="settings_help">Help</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_rules">Rules</string>
    <string name="settings_signout">SignOut</string>
    <string name="text_password_again">Password (Again)</string>

</resources>
