<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".registerlogin.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/register_title"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_login_hero" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleimg_profile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:onClick="onRegisterClick"
                        android:src="@drawable/ic_profile"
                        app:civ_border_color="@color/primaryTextColor"
                        app:civ_border_width="1dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/register_etUsername"
                            style="@style/modifiedEditText"
                            android:hint="@string/text_username"
                            android:inputType="textPersonName"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/register_etEmail"
                            style="@style/modifiedEditText"
                            android:hint="@string/text_email"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/register_etPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/text_password"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPasswordAgain"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/register_etPasswordAgain"
                            style="@style/modifiedEditText"
                            android:hint="@string/text_password_again"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onRegisterClick"
                        android:text="@string/text_register"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/register_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:adjustViewBounds="false"
            android:onClick="onRegisterClick"
            android:src="@drawable/ic_back_img" />

        <TextView
            android:id="@+id/register_loginButton"
            style="@style/parent"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="onRegisterClick"
            android:text="@string/register_signin"
            android:textAlignment="center"
            android:textColor="@color/whiteTextColor"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>