<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileBackground"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.ProfileTheme"
    tools:context=".Fragments.ProfileFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/profilePrimaryDark"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/profile_bk"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_round" />

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\@Username"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/profileBackground"
                    android:gravity="center">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:background="@drawable/profile_bk" />

                    <TextView
                        android:id="@+id/profile_btn_edit"
                        style="@style/profileStyledBackButton"
                        android:gravity="center"
                        android:text="@string/profile_edit"
                        android:textSize="20sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/profile_btn_follow_save"
                        style="@style/profileStyledFollowSaveButton"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/profile_follow"
                        android:textSize="20sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/profile_btn_send_cancel"
                        style="@style/profileStyledSendCancelButton"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/profile_message"
                        android:textSize="20sp"
                        android:visibility="gone" />
                </RelativeLayout>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".Fragments.ProfileFragment"
        tools:showIn="@layout/fragment_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/headerText"
                android:layout_marginBottom="20dp"
                android:text="@string/profile_account_info" />

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/nameImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/ic_name" />

                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/profileDetailsTextMain"
                    android:layout_toEndOf="@id/nameImageView"
                    android:text="@string/text_username" />

                <EditText
                    android:id="@+id/profile_et_username"
                    style="@style/profileDetailsMiniText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_toEndOf="@id/nameImageView"
                    android:background="@drawable/rounded_et_deactive"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLength="50"
                    android:padding="5dp"
                    android:text="@string/text_username" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/emailImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/ic_email" />

                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_toEndOf="@id/emailImageView"
                    android:text="@string/text_email" />

                <EditText
                    android:id="@+id/profile_et_email"
                    style="@style/profileDetailsMiniText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_toEndOf="@id/emailImageView"
                    android:background="@drawable/rounded_et_deactive"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:padding="5dp"
                    android:text="@string/text_email" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/mobileImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/ic_mobile" />

                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_toEndOf="@id/mobileImageView"
                    android:text="@string/profile_mobile" />

                <EditText
                    android:id="@+id/profile_et_mobile"
                    style="@style/profileDetailsMiniText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_toEndOf="@id/mobileImageView"
                    android:background="@drawable/rounded_et_deactive"
                    android:enabled="false"
                    android:inputType="phone"
                    android:maxLength="30"
                    android:padding="5dp"
                    android:text="@string/profile_mobile" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/profile_about_img"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/ic_info" />


                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/profile_about_img"
                    android:text="@string/profile_about" />

            </RelativeLayout>

            <EditText
                android:id="@+id/profile_et_about"
                style="@style/profileDetailsMiniText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_et_deactive"
                android:enabled="true"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="213"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/profile_about"
                android:textAlignment="textStart"
                android:textSize="13sp" />

            <View style="@style/proifleDetailsView" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/profile_img_back"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_et_active"
        android:src="@drawable/ic_arrow_back"
        android:visibility="gone" />

</RelativeLayout>